# hiwrite

./: .env.sample  .gitignore  Cargo.toml  README.md
migrations/2022-11-1-101223_init/: down.sql  up.sql
src/: main.rs  schema.rs
src/category/: mod.rs  route.rs
src/category/controller/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/module/: model.rs  router.rs
src/module/controller/: create.rs  delete.rs  get.rs  get_all.rs  get_category.rs  mod.rs  update.rs
src/page/: mod.rs  model.rs  router.rs
src/page/controller/: create.rs  delete.rs  display.rs  get.rs  get_all.rs  get_mod.rs  mod.rs  parse.rs  update.rs
src/plugin/: error.rs  impl.rs  manager.rs  metadata.rs  mod.rs  plugin.rs
src/user/: model.rs  router.rs
src/user/controller/: check.rs  create.rs  delete.rs  get.rs  login.rs  login_res.rs  logout.rs  mod.rs  signup.rs  update.rs
src/utils/: auth.rs  default.rs  error.rs  mod.rs  model_manager.rs  structs.rs
templates/: 404.hbs
