[package]
name = "hiwrite"
version = "0.0.1"
authors = ["nautical <piyush_gururani@techfund.jp>"]
edition = "2018"

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-ratelimit = "0.3.1"
argon2 = "0.2.4"
chrono = { version = "0.4", features = ["serde"] }
diesel = {version = "1.4.8", features= ["postgres","chrono","r2d2"]}
diesel_migrations = "1.4.0"
dotenv = "*"
env_logger = "0.8.4"
envy = "0.4"
handlebars = {version = "3.5.2", features = ["dir_source"]}
rand_core = { version = "0.6", features = ["std"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.60"
notify = "4.0.16"
thiserror = "1.0.22"
log = "0.4.0"
jsonwebtoken = "7.2.0"
uuid = {version = "0.8", features=["serde", "v4"]}
futures = "*"
time = "0.2.23"

[dev-dependencies]
actix-rt = "2.2.0"
